compiladores II/T1/sintatico.output
Terminals unused in grammar

    CONNECT_DOTS
    E
    PI
    X
    INVALID_SYMBOL
    SYNTAX_ERROR


State 100 conflicts: 1 shift/reduce


Grammar

    0 $accept: inicio $end

    1 inicio: comando

    2 comando: SHOW p1
    3        | RESET SETTINGS PONTO_VIRGULA EOL
    4        | QUIT EOL
    5        | SET p3
    6        | PLOT p4
    7        | INTEGRATE ABRE_PARENTESES valor INTERVALO valor VIRGULA func_trigonometrica FECHA_PARENTESES PONTO_VIRGULA EOL
    8        | MATRIX IGUAL cria_matriz
    9        | SOLVE p5
   10        | ABOUT PONTO_VIRGULA EOL
   11        | RPN ABRE_PARENTESES exp FECHA_PARENTESES PONTO_VIRGULA EOL
   12        | SUM ABRE_PARENTESES IDENTIFICADOR VIRGULA valor INTERVALO valor VIRGULA exp FECHA_PARENTESES PONTO_VIRGULA EOL
   13        | IDENTIFICADOR PONTO_VIRGULA EOL
   14        | IDENTIFICADOR ATRIBUICAO valor PONTO_VIRGULA EOL
   15        | IDENTIFICADOR ATRIBUICAO exp PONTO_VIRGULA EOL
   16        | exp EOL

   17 p1: SETTINGS PONTO_VIRGULA EOL
   18   | MATRIX PONTO_VIRGULA EOL
   19   | SYMBOLS PONTO_VIRGULA EOL

   20 p3: H_VIEW valor INTERVALO valor PONTO_VIRGULA EOL
   21   | V_VIEW valor INTERVALO valor PONTO_VIRGULA EOL
   22   | AXIS ON PONTO_VIRGULA EOL
   23   | AXIS OFF PONTO_VIRGULA EOL
   24   | ERASE PLOT OFF PONTO_VIRGULA EOL
   25   | ERASE PLOT ON PONTO_VIRGULA EOL
   26   | INTEGRAL_STEPS valor PONTO_VIRGULA EOL
   27   | FLOAT PRECISION valor PONTO_VIRGULA EOL

   28 p4: PONTO_VIRGULA EOL
   29   | ABRE_PARENTESES func_trigonometrica FECHA_PARENTESES PONTO_VIRGULA EOL

   30 p5: DETERMINANT PONTO_VIRGULA EOL
   31   | LINEAR_SYSTEM PONTO_VIRGULA EOL

   32 exp: factor
   33    | exp ADICAO factor
   34    | exp SUBTRACAO factor

   35 factor: term
   36       | factor MULTIPLICACAO term
   37       | factor DIVISAO term
   38       | factor POTENCIACAO term
   39       | factor RESTO_DIVISAO term
   40       | func_trigonometrica

   41 func_trigonometrica: SEN ABRE_PARENTESES exp FECHA_PARENTESES
   42                    | COS ABRE_PARENTESES exp FECHA_PARENTESES
   43                    | TAN ABRE_PARENTESES exp FECHA_PARENTESES
   44                    | ABS ABRE_PARENTESES exp FECHA_PARENTESES

   45 term: valor
   46     | IDENTIFICADOR
   47     | ABRE_PARENTESES exp FECHA_PARENTESES

   48 valor: ADICAO NUMERO_REAL
   49      | SUBTRACAO NUMERO_REAL
   50      | NUMERO_REAL
   51      | ADICAO NUMERO_INTEIRO
   52      | SUBTRACAO NUMERO_INTEIRO
   53      | NUMERO_INTEIRO

   54 um_ou_mais_colunas: VIRGULA valor um_ou_mais_colunas
   55                   | ε

   56 zero_ou_mais_linhas: VIRGULA ABRE_COLCHETES valor um_ou_mais_colunas FECHA_COLCHETES zero_ou_mais_linhas
   57                    | ε

   58 cria_matriz: ABRE_COLCHETES ABRE_COLCHETES valor um_ou_mais_colunas FECHA_COLCHETES zero_ou_mais_linhas FECHA_COLCHETES PONTO_VIRGULA EOL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ABOUT (258) 10
    ABS (259) 44
    AXIS (260) 22 23
    CONNECT_DOTS (261)
    COS (262) 42
    DETERMINANT (263) 30
    E (264)
    ERASE (265) 24 25
    FLOAT (266) 27
    H_VIEW (267) 20
    INTEGRAL_STEPS (268) 26
    INTEGRATE (269) 7
    LINEAR_SYSTEM (270) 31
    MATRIX (271) 8 18
    OFF (272) 23 24
    ON (273) 22 25
    PI (274)
    PLOT (275) 6 24 25
    PRECISION (276) 27
    QUIT (277) 4
    RESET (278) 3
    RPN (279) 11
    SEN (280) 41
    SET (281) 5
    SETTINGS (282) 3 17
    SHOW (283) 2
    SOLVE (284) 9
    SUM (285) 12
    SYMBOLS (286) 19
    TAN (287) 43
    V_VIEW (288) 21
    X (289)
    ADICAO (290) 33 48 51
    SUBTRACAO (291) 34 49 52
    MULTIPLICACAO (292) 36
    DIVISAO (293) 37
    POTENCIACAO (294) 38
    RESTO_DIVISAO (295) 39
    ABRE_PARENTESES (296) 7 11 12 29 41 42 43 44 47
    FECHA_PARENTESES (297) 7 11 12 29 41 42 43 44 47
    INTERVALO (298) 7 12 20 21
    IGUAL (299) 8
    ATRIBUICAO (300) 14 15
    ABRE_COLCHETES (301) 56 58
    FECHA_COLCHETES (302) 56 58
    PONTO_VIRGULA (303) 3 7 10 11 12 13 14 15 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 58
    VIRGULA (304) 7 12 54 56
    NUMERO_REAL <flutuante> (305) 48 49 50
    NUMERO_INTEIRO <integer> (306) 51 52 53
    IDENTIFICADOR <identifier> (307) 12 13 14 15 46
    EOL (308) 3 4 7 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 58
    INVALID_SYMBOL (309)
    SYNTAX_ERROR (310)


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    inicio (57)
        on left: 1
        on right: 0
    comando (58)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
        on right: 1
    p1 (59)
        on left: 17 18 19
        on right: 2
    p3 (60)
        on left: 20 21 22 23 24 25 26 27
        on right: 5
    p4 (61)
        on left: 28 29
        on right: 6
    p5 (62)
        on left: 30 31
        on right: 9
    exp <ast> (63)
        on left: 32 33 34
        on right: 11 12 15 16 33 34 41 42 43 44 47
    factor <ast> (64)
        on left: 35 36 37 38 39 40
        on right: 32 33 34 36 37 38 39
    func_trigonometrica <ast> (65)
        on left: 41 42 43 44
        on right: 7 29 40
    term <ast> (66)
        on left: 45 46 47
        on right: 35 36 37 38 39
    valor <ast> (67)
        on left: 48 49 50 51 52 53
        on right: 7 12 14 20 21 26 27 45 54 56 58
    um_ou_mais_colunas <ast> (68)
        on left: 54 55
        on right: 54 56 58
    zero_ou_mais_linhas <ast> (69)
        on left: 56 57
        on right: 56 58
    cria_matriz (70)
        on left: 58
        on right: 8


State 0

    0 $accept: • inicio $end

    ABOUT            shift, and go to state 1
    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    INTEGRATE        shift, and go to state 4
    MATRIX           shift, and go to state 5
    PLOT             shift, and go to state 6
    QUIT             shift, and go to state 7
    RESET            shift, and go to state 8
    RPN              shift, and go to state 9
    SEN              shift, and go to state 10
    SET              shift, and go to state 11
    SHOW             shift, and go to state 12
    SOLVE            shift, and go to state 13
    SUM              shift, and go to state 14
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 21

    inicio               go to state 22
    comando              go to state 23
    exp                  go to state 24
    factor               go to state 25
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 1

   10 comando: ABOUT • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 29


State 2

   44 func_trigonometrica: ABS • ABRE_PARENTESES exp FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 30


State 3

   42 func_trigonometrica: COS • ABRE_PARENTESES exp FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 31


State 4

    7 comando: INTEGRATE • ABRE_PARENTESES valor INTERVALO valor VIRGULA func_trigonometrica FECHA_PARENTESES PONTO_VIRGULA EOL

    ABRE_PARENTESES  shift, and go to state 32


State 5

    8 comando: MATRIX • IGUAL cria_matriz

    IGUAL  shift, and go to state 33


State 6

    6 comando: PLOT • p4

    ABRE_PARENTESES  shift, and go to state 34
    PONTO_VIRGULA    shift, and go to state 35

    p4  go to state 36


State 7

    4 comando: QUIT • EOL

    EOL  shift, and go to state 37


State 8

    3 comando: RESET • SETTINGS PONTO_VIRGULA EOL

    SETTINGS  shift, and go to state 38


State 9

   11 comando: RPN • ABRE_PARENTESES exp FECHA_PARENTESES PONTO_VIRGULA EOL

    ABRE_PARENTESES  shift, and go to state 39


State 10

   41 func_trigonometrica: SEN • ABRE_PARENTESES exp FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 40


State 11

    5 comando: SET • p3

    AXIS            shift, and go to state 41
    ERASE           shift, and go to state 42
    FLOAT           shift, and go to state 43
    H_VIEW          shift, and go to state 44
    INTEGRAL_STEPS  shift, and go to state 45
    V_VIEW          shift, and go to state 46

    p3  go to state 47


State 12

    2 comando: SHOW • p1

    MATRIX    shift, and go to state 48
    SETTINGS  shift, and go to state 49
    SYMBOLS   shift, and go to state 50

    p1  go to state 51


State 13

    9 comando: SOLVE • p5

    DETERMINANT    shift, and go to state 52
    LINEAR_SYSTEM  shift, and go to state 53

    p5  go to state 54


State 14

   12 comando: SUM • ABRE_PARENTESES IDENTIFICADOR VIRGULA valor INTERVALO valor VIRGULA exp FECHA_PARENTESES PONTO_VIRGULA EOL

    ABRE_PARENTESES  shift, and go to state 55


State 15

   43 func_trigonometrica: TAN • ABRE_PARENTESES exp FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 56


State 16

   48 valor: ADICAO • NUMERO_REAL
   51      | ADICAO • NUMERO_INTEIRO

    NUMERO_REAL     shift, and go to state 57
    NUMERO_INTEIRO  shift, and go to state 58


State 17

   49 valor: SUBTRACAO • NUMERO_REAL
   52      | SUBTRACAO • NUMERO_INTEIRO

    NUMERO_REAL     shift, and go to state 59
    NUMERO_INTEIRO  shift, and go to state 60


State 18

   47 term: ABRE_PARENTESES • exp FECHA_PARENTESES

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    exp                  go to state 62
    factor               go to state 25
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 19

   50 valor: NUMERO_REAL •

    $default  reduce using rule 50 (valor)


State 20

   53 valor: NUMERO_INTEIRO •

    $default  reduce using rule 53 (valor)


State 21

   13 comando: IDENTIFICADOR • PONTO_VIRGULA EOL
   14        | IDENTIFICADOR • ATRIBUICAO valor PONTO_VIRGULA EOL
   15        | IDENTIFICADOR • ATRIBUICAO exp PONTO_VIRGULA EOL
   46 term: IDENTIFICADOR •

    ATRIBUICAO     shift, and go to state 63
    PONTO_VIRGULA  shift, and go to state 64

    $default  reduce using rule 46 (term)


State 22

    0 $accept: inicio • $end

    $end  shift, and go to state 65


State 23

    1 inicio: comando •

    $default  reduce using rule 1 (inicio)


State 24

   16 comando: exp • EOL
   33 exp: exp • ADICAO factor
   34    | exp • SUBTRACAO factor

    ADICAO     shift, and go to state 66
    SUBTRACAO  shift, and go to state 67
    EOL        shift, and go to state 68


State 25

   32 exp: factor •
   36 factor: factor • MULTIPLICACAO term
   37       | factor • DIVISAO term
   38       | factor • POTENCIACAO term
   39       | factor • RESTO_DIVISAO term

    MULTIPLICACAO  shift, and go to state 69
    DIVISAO        shift, and go to state 70
    POTENCIACAO    shift, and go to state 71
    RESTO_DIVISAO  shift, and go to state 72

    $default  reduce using rule 32 (exp)


State 26

   40 factor: func_trigonometrica •

    $default  reduce using rule 40 (factor)


State 27

   35 factor: term •

    $default  reduce using rule 35 (factor)


State 28

   45 term: valor •

    $default  reduce using rule 45 (term)


State 29

   10 comando: ABOUT PONTO_VIRGULA • EOL

    EOL  shift, and go to state 73


State 30

   44 func_trigonometrica: ABS ABRE_PARENTESES • exp FECHA_PARENTESES

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    exp                  go to state 74
    factor               go to state 25
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 31

   42 func_trigonometrica: COS ABRE_PARENTESES • exp FECHA_PARENTESES

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    exp                  go to state 75
    factor               go to state 25
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 32

    7 comando: INTEGRATE ABRE_PARENTESES • valor INTERVALO valor VIRGULA func_trigonometrica FECHA_PARENTESES PONTO_VIRGULA EOL

    ADICAO          shift, and go to state 16
    SUBTRACAO       shift, and go to state 17
    NUMERO_REAL     shift, and go to state 19
    NUMERO_INTEIRO  shift, and go to state 20

    valor  go to state 76


State 33

    8 comando: MATRIX IGUAL • cria_matriz

    ABRE_COLCHETES  shift, and go to state 77

    cria_matriz  go to state 78


State 34

   29 p4: ABRE_PARENTESES • func_trigonometrica FECHA_PARENTESES PONTO_VIRGULA EOL

    ABS  shift, and go to state 2
    COS  shift, and go to state 3
    SEN  shift, and go to state 10
    TAN  shift, and go to state 15

    func_trigonometrica  go to state 79


State 35

   28 p4: PONTO_VIRGULA • EOL

    EOL  shift, and go to state 80


State 36

    6 comando: PLOT p4 •

    $default  reduce using rule 6 (comando)


State 37

    4 comando: QUIT EOL •

    $default  reduce using rule 4 (comando)


State 38

    3 comando: RESET SETTINGS • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 81


State 39

   11 comando: RPN ABRE_PARENTESES • exp FECHA_PARENTESES PONTO_VIRGULA EOL

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    exp                  go to state 82
    factor               go to state 25
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 40

   41 func_trigonometrica: SEN ABRE_PARENTESES • exp FECHA_PARENTESES

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    exp                  go to state 83
    factor               go to state 25
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 41

   22 p3: AXIS • ON PONTO_VIRGULA EOL
   23   | AXIS • OFF PONTO_VIRGULA EOL

    OFF  shift, and go to state 84
    ON   shift, and go to state 85


State 42

   24 p3: ERASE • PLOT OFF PONTO_VIRGULA EOL
   25   | ERASE • PLOT ON PONTO_VIRGULA EOL

    PLOT  shift, and go to state 86


State 43

   27 p3: FLOAT • PRECISION valor PONTO_VIRGULA EOL

    PRECISION  shift, and go to state 87


State 44

   20 p3: H_VIEW • valor INTERVALO valor PONTO_VIRGULA EOL

    ADICAO          shift, and go to state 16
    SUBTRACAO       shift, and go to state 17
    NUMERO_REAL     shift, and go to state 19
    NUMERO_INTEIRO  shift, and go to state 20

    valor  go to state 88


State 45

   26 p3: INTEGRAL_STEPS • valor PONTO_VIRGULA EOL

    ADICAO          shift, and go to state 16
    SUBTRACAO       shift, and go to state 17
    NUMERO_REAL     shift, and go to state 19
    NUMERO_INTEIRO  shift, and go to state 20

    valor  go to state 89


State 46

   21 p3: V_VIEW • valor INTERVALO valor PONTO_VIRGULA EOL

    ADICAO          shift, and go to state 16
    SUBTRACAO       shift, and go to state 17
    NUMERO_REAL     shift, and go to state 19
    NUMERO_INTEIRO  shift, and go to state 20

    valor  go to state 90


State 47

    5 comando: SET p3 •

    $default  reduce using rule 5 (comando)


State 48

   18 p1: MATRIX • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 91


State 49

   17 p1: SETTINGS • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 92


State 50

   19 p1: SYMBOLS • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 93


State 51

    2 comando: SHOW p1 •

    $default  reduce using rule 2 (comando)


State 52

   30 p5: DETERMINANT • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 94


State 53

   31 p5: LINEAR_SYSTEM • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 95


State 54

    9 comando: SOLVE p5 •

    $default  reduce using rule 9 (comando)


State 55

   12 comando: SUM ABRE_PARENTESES • IDENTIFICADOR VIRGULA valor INTERVALO valor VIRGULA exp FECHA_PARENTESES PONTO_VIRGULA EOL

    IDENTIFICADOR  shift, and go to state 96


State 56

   43 func_trigonometrica: TAN ABRE_PARENTESES • exp FECHA_PARENTESES

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    exp                  go to state 97
    factor               go to state 25
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 57

   48 valor: ADICAO NUMERO_REAL •

    $default  reduce using rule 48 (valor)


State 58

   51 valor: ADICAO NUMERO_INTEIRO •

    $default  reduce using rule 51 (valor)


State 59

   49 valor: SUBTRACAO NUMERO_REAL •

    $default  reduce using rule 49 (valor)


State 60

   52 valor: SUBTRACAO NUMERO_INTEIRO •

    $default  reduce using rule 52 (valor)


State 61

   46 term: IDENTIFICADOR •

    $default  reduce using rule 46 (term)


State 62

   33 exp: exp • ADICAO factor
   34    | exp • SUBTRACAO factor
   47 term: ABRE_PARENTESES exp • FECHA_PARENTESES

    ADICAO            shift, and go to state 66
    SUBTRACAO         shift, and go to state 67
    FECHA_PARENTESES  shift, and go to state 98


State 63

   14 comando: IDENTIFICADOR ATRIBUICAO • valor PONTO_VIRGULA EOL
   15        | IDENTIFICADOR ATRIBUICAO • exp PONTO_VIRGULA EOL

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    exp                  go to state 99
    factor               go to state 25
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 100


State 64

   13 comando: IDENTIFICADOR PONTO_VIRGULA • EOL

    EOL  shift, and go to state 101


State 65

    0 $accept: inicio $end •

    $default  accept


State 66

   33 exp: exp ADICAO • factor

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    factor               go to state 102
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 67

   34 exp: exp SUBTRACAO • factor

    ABS              shift, and go to state 2
    COS              shift, and go to state 3
    SEN              shift, and go to state 10
    TAN              shift, and go to state 15
    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    factor               go to state 103
    func_trigonometrica  go to state 26
    term                 go to state 27
    valor                go to state 28


State 68

   16 comando: exp EOL •

    $default  reduce using rule 16 (comando)


State 69

   36 factor: factor MULTIPLICACAO • term

    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    term   go to state 104
    valor  go to state 28


State 70

   37 factor: factor DIVISAO • term

    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    term   go to state 105
    valor  go to state 28


State 71

   38 factor: factor POTENCIACAO • term

    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    term   go to state 106
    valor  go to state 28


State 72

   39 factor: factor RESTO_DIVISAO • term

    ADICAO           shift, and go to state 16
    SUBTRACAO        shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    NUMERO_REAL      shift, and go to state 19
    NUMERO_INTEIRO   shift, and go to state 20
    IDENTIFICADOR    shift, and go to state 61

    term   go to state 107
    valor  go to state 28


State 73

   10 comando: ABOUT PONTO_VIRGULA EOL •

    $default  reduce using rule 10 (comando)


State 74

   33 exp: exp • ADICAO factor
   34    | exp • SUBTRACAO factor
   44 func_trigonometrica: ABS ABRE_PARENTESES exp • FECHA_PARENTESES

    ADICAO            shift, and go to state 66
    SUBTRACAO         shift, and go to state 67
    FECHA_PARENTESES  shift, and go to state 108


State 75

   33 exp: exp • ADICAO factor
   34    | exp • SUBTRACAO factor
   42 func_trigonometrica: COS ABRE_PARENTESES exp • FECHA_PARENTESES

    ADICAO            shift, and go to state 66
    SUBTRACAO         shift, and go to state 67
    FECHA_PARENTESES  shift, and go to state 109


State 76

    7 comando: INTEGRATE ABRE_PARENTESES valor • INTERVALO valor VIRGULA func_trigonometrica FECHA_PARENTESES PONTO_VIRGULA EOL

    INTERVALO  shift, and go to state 110


State 77

   58 cria_matriz: ABRE_COLCHETES • ABRE_COLCHETES valor um_ou_mais_colunas FECHA_COLCHETES zero_ou_mais_linhas FECHA_COLCHETES PONTO_VIRGULA EOL

    ABRE_COLCHETES  shift, and go to state 111


State 78

    8 comando: MATRIX IGUAL cria_matriz •

    $default  reduce using rule 8 (comando)


State 79

   29 p4: ABRE_PARENTESES func_trigonometrica • FECHA_PARENTESES PONTO_VIRGULA EOL

    FECHA_PARENTESES  shift, and go to state 112


State 80

   28 p4: PONTO_VIRGULA EOL •

    $default  reduce using rule 28 (p4)


State 81

    3 comando: RESET SETTINGS PONTO_VIRGULA • EOL

    EOL  shift, and go to state 113


State 82

   11 comando: RPN ABRE_PARENTESES exp • FECHA_PARENTESES PONTO_VIRGULA EOL
   33 exp: exp • ADICAO factor
   34    | exp • SUBTRACAO factor

    ADICAO            shift, and go to state 66
    SUBTRACAO         shift, and go to state 67
    FECHA_PARENTESES  shift, and go to state 114


State 83

   33 exp: exp • ADICAO factor
   34    | exp • SUBTRACAO factor
   41 func_trigonometrica: SEN ABRE_PARENTESES exp • FECHA_PARENTESES

    ADICAO            shift, and go to state 66
    SUBTRACAO         shift, and go to state 67
    FECHA_PARENTESES  shift, and go to state 115


State 84

   23 p3: AXIS OFF • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 116


State 85

   22 p3: AXIS ON • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 117


State 86

   24 p3: ERASE PLOT • OFF PONTO_VIRGULA EOL
   25   | ERASE PLOT • ON PONTO_VIRGULA EOL

    OFF  shift, and go to state 118
    ON   shift, and go to state 119


State 87

   27 p3: FLOAT PRECISION • valor PONTO_VIRGULA EOL

    ADICAO          shift, and go to state 16
    SUBTRACAO       shift, and go to state 17
    NUMERO_REAL     shift, and go to state 19
    NUMERO_INTEIRO  shift, and go to state 20

    valor  go to state 120


State 88

   20 p3: H_VIEW valor • INTERVALO valor PONTO_VIRGULA EOL

    INTERVALO  shift, and go to state 121


State 89

   26 p3: INTEGRAL_STEPS valor • PONTO_VIRGULA EOL

    PONTO_VIRGULA  shift, and go to state 122


State 90

   21 p3: V_VIEW valor • INTERVALO valor PONTO_VIRGULA EOL

    INTERVALO  shift, and go to state 123


State 91

   18 p1: MATRIX PONTO_VIRGULA • EOL

    EOL  shift, and go to state 124


State 92

   17 p1: SETTINGS PONTO_VIRGULA • EOL

    EOL  shift, and go to state 125


State 93

   19 p1: SYMBOLS PONTO_VIRGULA • EOL

    EOL  shift, and go to state 126


State 94

   30 p5: DETERMINANT PONTO_VIRGULA • EOL

    EOL  shift, and go to state 127


State 95

   31 p5: LINEAR_SYSTEM PONTO_VIRGULA • EOL

    EOL  shift, and go to state 128


State 96

   12 comando: SUM ABRE_PARENTESES IDENTIFICADOR • VIRGULA valor INTERVALO valor VIRGULA exp FECHA_PARENTESES PONTO_VIRGULA EOL

    VIRGULA  shift, and go to state 129


State 97

   33 exp: exp • ADICAO factor
   34    | exp • SUBTRACAO factor
   43 func_trigonometrica: TAN ABRE_PARENTESES exp • FECHA_PARENTESES

    ADICAO            shift, and go to state 66
    SUBTRACAO         shift, and go to state 67
    FECHA_PARENTESES  shift, and go to state 130


State 98

   47 term: ABRE_PARENTESES exp FECHA_PARENTESES •

    $default  reduce using rule 47 (term)


State 99

   15 comando: IDENTIFICADOR ATRIBUICAO exp • PONTO_VIRGULA EOL
   33 exp: exp • ADICAO factor
   34    | exp • SUBTRACAO factor

    ADICAO         shift, and go to state 66
    SUBTRACAO      shift, and go to state 67
    PONTO_VIRGULA  shift, and go to state 131


State 100

   14 comando: IDENTIFICADOR ATRIBUICAO valor • PONTO_VIRGULA EOL
   45 term: valor •

    PONTO_VIRGULA  shift, and go to state 132

    PONTO_VIRGULA  [reduce using rule 45 (term)]
    $default       reduce using rule 45 (term)


State 101

   13 comando: IDENTIFICADOR PONTO_VIRGULA EOL •

    $default  reduce using rule 13 (comando)


State 102

   33 exp: exp ADICAO factor •
   36 factor: factor • MULTIPLICACAO term
   37       | factor • DIVISAO term
   38       | factor • POTENCIACAO term
   39       | factor • RESTO_DIVISAO term

    MULTIPLICACAO  shift, and go to state 69
    DIVISAO        shift, and go to state 70
    POTENCIACAO    shift, and go to state 71
    RESTO_DIVISAO  shift, and go to state 72

    $default  reduce using rule 33 (exp)


State 103

   34 exp: exp SUBTRACAO factor •
   36 factor: factor • MULTIPLICACAO term
   37       | factor • DIVISAO term
   38       | factor • POTENCIACAO term
   39       | factor • RESTO_DIVISAO term

    MULTIPLICACAO  shift, and go to state 69
    DIVISAO        shift, and go to state 70
    POTENCIACAO    shift, and go to state 71
    RESTO_DIVISAO  shift, and go to state 72

    $default  reduce using rule 34 (exp)


State 104

   36 factor: factor MULTIPLICACAO term •

    $default  reduce using rule 36 (factor)


State 105

   37 factor: factor DIVISAO term •

    $default  reduce using rule 37 (factor)


State 106

   38 factor: factor POTENCIACAO term •

    $default  reduce using rule 38 (factor)


State 107

   39 factor: factor RESTO_DIVISAO term •

    $default  reduce using rule 39 (factor)


State 108

   44 func_trigonometrica: ABS ABRE_PARENTESES exp FECHA_PARENTESES •

    $default  reduce using rule 44 (func_trigonometrica)


State 109

   42 func_trigonometrica: COS ABRE_PARENTESES exp FECHA_PARENTESES •

    $default  reduce using rule 42 (func_trigonometrica)


State 110

    7 comando: INTEGRATE ABRE_PARENTESES valor INTERVALO • valor VIRGULA func_trigonometrica FECHA_PARENTESES PONTO_VIRGULA EOL
